# Changelog

## v0.4.1

- Released

## v1.0.0

- Restructure build system
- Restructure codebase

### v1.0.3

- Add `py.typed` to `owmpy` package

### v1.0.4

- Change sys.id, sys.type to int

### v1.0.5

- Added `__all__` attributes to modules