@@ -1,7 +1,3 @@
-format:
-	isort .
-	black .
-
 clean:
 	rm -rf dist *.egg-info
 
@@ -11,4 +7,4 @@ dist:
 twine-upload: dist
 	twine upload 'dist/*'
 
-.PHONY: format clean twine-upload
+.PHONY: clean twine-upload
