@@ -20,3 +20,7 @@
 ### v1.0.5
 
 - Added `__all__` attributes to modules
+
+## [Unreleased]
+
+- Set up pre-commit
